VMDNS - Protocol head, cache, query processing and forwarders.
Updating VMDNS code with latest changes.

--- a/vmdns/client/Makefile.am
+++ b/vmdns/client/Makefile.am
@@ -22,6 +22,7 @@ libvmdnsclient_la_LIBADD = \
     @top_builddir@/common/libcommon.la \
     @DCERPC_LIBS@ \
     @LWBASE_LIBS@ \
+    @GSSAPI_LIBS@ \
     @PTHREAD_LIBS@
 
 libvmdnsclient_la_LDFLAGS = \
