Avoid hard coded path in STS boot scripts
Change-Id: Ib9bbc90dd4c0ace38fc28206d253e143c8a9f75e

--- a/vmidentity/config/vmware-idmd.sh.in
+++ b/vmidentity/config/vmware-idmd.sh.in
@@ -1,9 +1,8 @@
 #!/bin/bash
 
 JAVA_HOME=@JAVA_HOME@
-JSVC_HOME=/opt/commons-daemon-1.0.15
-JSVC_NAME=jsvc
-JSVC_BIN=$JSVC_HOME/bin/$JSVC_NAME
+JSVC_HOME=@COMMONS_DAEMON_HOME@
+JSVC_BIN=@JSVC@
 
 LIKEWISE_HOME=@LW_BASE_PATH@
 LIKEWISE_LWREGSHELL=$LIKEWISE_HOME/bin/lwregshell
