--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -6,9 +6,8 @@ VMWARE_INSTANCE=$VMWARE_HOME/$INSTANCE_NAME
 VMWARE_STS_CONFIG=$VMWARE_HOME/config
 
 JAVA_HOME=@JAVA_HOME@
-JSVC_HOME=/opt/commons-daemon-1.0.15
-JSVC_NAME=jsvc
-JSVC_BIN=$JSVC_HOME/bin/$JSVC_NAME
+JSVC_HOME=@COMMONS_DAEMON_HOME@
+JSVC_BIN=@JSVC@
 DEFAULT_MAX_RAM=256m
 
 PREFIX=/opt/vmware
