--- a/vmidentity/jdepends/build.xml
+++ b/vmidentity/jdepends/build.xml
@@ -20,7 +20,8 @@
        <resources>
 
           <!-- CORE (COMPILE_TIME + RUN_TIME)DEPENDENCIES -->
-           
+
+           <url url="http://central.maven.org/maven2/javax/activation/activation/1.1.1/activation-1.1.1.jar" />           
            <url url="http://central.maven.org/maven2/asm/asm/3.3/asm-3.3.jar" />
            <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-1.2-api/2.0.2/log4j-1.2-api-2.0.2.jar" />
            <url url="http://central.maven.org/maven2/org/bouncycastle/bcpkix-jdk15on/1.47/bcpkix-jdk15on-1.47.jar" />
