Publish vmafd jars to maven
Change-Id: I4b65c13583dedf0a2cf14c5112fe62d32c3bff8b

--- a/vmafd/configure.ac
+++ b/vmafd/configure.ac
@@ -178,6 +178,16 @@ AC_SUBST(OPENSSL_BASE_PATH)
 AC_SUBST(OPENSSL_INCLUDES)
 AC_SUBST(OPENSSL_LDFLAGS)
 
+# Maven component
+
+AC_ARG_WITH([maven],
+    [AC_HELP_STRING([--with-maven=<dir>], [use Apache Maven  binaries rooted at prefix <dir> ])],
+    [
+        MAVEN_HOME="$withval"
+    ])
+
+AC_SUBST(MAVEN_HOME)
+
 # Java
 
 AC_ARG_WITH([jdk],
