bugs: 1628728, 1637772, 1630364, 1628075, 1629742, 1595640, 1637772,  1638436, 1629742 Merge CLN 4170509 4170518, 4170552, 4170624, 4170638, 4170643, 4171328,  4171336, 4171340 from P4Please enter the commit message for your changes. Lines starting
Change-Id: I0edc51368c69e159a92fbe9d52a9031c8f90f40d

--- a/tools/common/VMIdentity.CommonUtils/VMIdentity.CommonUtils.csproj
+++ b/tools/common/VMIdentity.CommonUtils/VMIdentity.CommonUtils.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Log\FileLogger.cs" />
+    <Compile Include="Log\ILogger.cs" />
+    <Compile Include="Log\LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\CertificateExtensions.cs" />
     <Compile Include="Utilities\Constants.cs" />
