Lightwave Release version 6.0.2 -> 6.5.0
Change-Id: I87dd4bfe1f070b25161f3c9bb135781578162885

--- a/vmidentity/ssolib/build.xml
+++ b/vmidentity/ssolib/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2011 VMware, Inc. All rights reserved. VMware confidential.
+  Copyright 2011 VMware, Inc. All rights reserved. .
 -->
 <project name="vmware-identity-websso-client" default="build" basedir="." xmlns:artifact="antlib:org.apache.maven.artifact.ant">
 
@@ -59,7 +59,7 @@
         <fileset refid="jar-set.bouncy-castle" />
    </path>
    
-   <artifact:pom id="pom-websso-client" groupId="com.vmware.identity" artifactId="vmware-identity-websso-client" version="6.0.2" name="VMwareIdentity-STS-websso-client" >
+   <artifact:pom id="pom-websso-client" groupId="com.vmware.identity" artifactId="vmware-identity-websso-client" version="6.5.0" name="VMwareIdentity-STS-websso-client" >
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-1.2-api" version="2.0.2" />
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
