--- a/vmidentity/sts/build.xml
+++ b/vmidentity/sts/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2010-2011 VMware, Inc. All rights reserved. VMware confidential.
+  Copyright 2010-2011 VMware, Inc. All rights reserved. .
 -->
 <project name="sts" default="build" xmlns:rsel="antlib:org.apache.tools.ant.types.resources.selectors" xmlns:if="ant:if" xmlns:unless="ant.unless">
 
