Configure syslog-ng so that logs from the lightwave servers vmafdd, vmdird, vmcad, and vmdnsd go to separate files

--- a/vmafd/config/Makefile.am
+++ b/vmafd/config/Makefile.am
@@ -1,4 +1,5 @@
 vmafdconf_DATA = vmafd.reg \
+                 vmafdd-syslog-ng.conf \
 		 java.security.linux
 
 javaetc_DATA = vmware-override-java.security
