--- a/vmdir/config/Makefile.am
+++ b/vmdir/config/Makefile.am
@@ -2,5 +2,5 @@ vmdirconf_DATA = \
     vmdirschema.ldif \
     vmdir.reg        \
     vmdir-client.reg \
+    vmdird-syslog-ng.conf \
     saslvmdird.conf
-
