wait for lwsmd service to start

--- a/vmidentity/config/vmware-idmd.service.in
+++ b/vmidentity/config/vmware-idmd.service.in
@@ -1,6 +1,6 @@
 [Unit]
 Description=VMware Identity Manager Service
-After=syslog.target network.target
+After=syslog.target network.target lwsmd.service
 Requires=lwsmd.service
 
 [Service]
