--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -33,7 +33,7 @@ STSD_INITD_ERR_LOG="$STSD_LOG_DIR/utils/$SERVICE_NAME.err"
 
 # Tomcat Catalina settings
 
-CATALINA_HOME=/var/opt/apache-tomcat-7.0.68
+CATALINA_HOME=@TOMCAT_HOME@
 CATALINA_BASE="$VMWARE_HOME/$INSTANCE_NAME"
 
 ShowUsage()
