--- a/vmidentity/install/src/main/resources/installer-log4j.properties
+++ b/vmidentity/install/src/main/resources/installer-log4j.properties
@@ -1,5 +1,5 @@
 # **********************************************************************
-# Copyright 2015 VMware, Inc.  All rights reserved. VMware Confidential
+# Copyright 2015 VMware, Inc.  All rights reserved.
 # **********************************************************************
 
 # Set root logger level to ERROR and its only appender to LOGFILE.
