--- a/vmca/jdepends/build.xml
+++ b/vmca/jdepends/build.xml
@@ -22,9 +22,9 @@
        <resources>
 
           <!-- CORE (COMPILE_TIME + RUN_TIME)DEPENDENCIES -->
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/jna/3.5.1/jna-3.5.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/platform/3.5.1/platform-3.5.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna/3.5.1/jna-3.5.1.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/platform/3.5.1/platform-3.5.1.jar" />
+          <url url="http://central.maven.org/maven2/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
 
           <!-- TEST DEPENDENCIES -->
            <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
