Adding ROOT.war to host the landing page
Change-Id: If34fc3d40d65d3b597ed0c832fe52d32461cfe2c

--- a/vmidentity/configure.ac
+++ b/vmidentity/configure.ac
@@ -389,6 +389,7 @@ AC_CONFIG_FILES([Makefile
                  diagnostics/Makefile
                  idm/Makefile
                  tomcat-extensions/Makefile
+                 ROOT/Makefile
                  interop/Makefile
                  interop/idm/Makefile
                  interop/idm/ad/Makefile
