--- a/vmidentity/config/vmware-stsd.service.in
+++ b/vmidentity/config/vmware-stsd.service.in
@@ -6,6 +6,7 @@ Requires=vmware-idmd.service
 [Service]
 Type=forking
 ExecStart=/opt/vmware/sbin/vmware-stsd.sh start
+SuccessExitStatus=143
 
 [Install]
 WantedBy=multi-user.target
