sync stable/vmdir/... up to 4320754 (page search)

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -22,6 +22,7 @@ libmiddle_layer_la_SOURCES = \
     modify.c	\
     password.c	\
     plugin.c	\
+    pscache.c   \
     sasl.c      \
     saslsockbuf.c \
     search.c	\
