sync stable/vmdir/... up to 4322984 (dynamic indexing/container uniqueness)

--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -12,13 +12,16 @@
 noinst_LTLIBRARIES = libmdb-store.la
 
 libmdb_store_la_SOURCES = \
-    attrindexing.c  \
-    config.c        \
-    entry.c         \
-    generic.c       \
-    globals.c       \
-    indexer.c       \
-    init.c          \
+    config.c \
+    entry.c \
+    generic.c \
+    globals.c \
+    index.c \
+    indexdesc.c \
+    indexreadutil.c \
+    indexwriteutil.c \
+    init.c \
+    iterate.c \
     txn.c
 
 libmdb_store_la_CPPFLAGS = \
