--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -10,24 +10,25 @@
 noinst_LTLIBRARIES = libmiddle-layer.la
 
 libmiddle_layer_la_SOURCES = \
-    add.c	\
-    bind.c	\
-    computedattribute.c	\
-    delete.c    \
-    dn.c	\
-    globals.c	\
-    group.c	\
-    krb.c       \
-    lockoutpolicy.c	\
-    modify.c	\
-    password.c	\
-    plugin.c	\
-    pscache.c   \
-    sasl.c      \
+    add.c \
+    bind.c \
+    computedattribute.c \
+    delete.c \
+    dn.c \
+    globals.c \
+    group.c \
+    index.c \
+    krb.c \
+    lockoutpolicy.c \
+    modify.c \
+    password.c \
+    plugin.c \
+    pscache.c \
+    sasl.c \
     saslsockbuf.c \
-    search.c	\
-    specialsearch.c	\
-    srputil.c	\
+    search.c \
+    specialsearch.c \
+    srputil.c \
     libmain.c
 
 libmiddle_layer_la_CPPFLAGS = \
