VMDIR + IDM REST refactoring
Change-Id: I50f284639d303531ee5edf649f1189bc389d00bf

--- a/vmidentity/rest/pom.xml
+++ b/vmidentity/rest/pom.xml
@@ -20,6 +20,7 @@
     <module>core</module>
     <module>afd</module>
     <module>idm</module>
+    <module>vmdir</module>
   </modules>
 
   <properties>
