VMDir vs IDM REST endpoints split changes for Windows and Mac UI tools. sync tools/... up to 4334775.
Change-Id: I8d303c2f0bfe01c31b85e41225d0055aa28b432f

--- a/tools/common/VMIdentity.CommonUtils/Brand_lw.config
+++ b/tools/common/VMIdentity.CommonUtils/Brand_lw.config
@@ -13,5 +13,6 @@
     <add key="ssoRoot" value="Lightwave SSO Servers"/>
     <add key="dnsRoot" value="Lightwave Domain Name Server"/>
     <add key= "schemaRoot" value="Lightwave Directory Schema"/>
+	<add key="product" value="lightwave"/>
   </appSettings>
 </configuration>
