--- a/tools/common/VMIdentity.CommonUtils/Brand_vsphere.config
+++ b/tools/common/VMIdentity.CommonUtils/Brand_vsphere.config
@@ -13,5 +13,6 @@
     <add key="pscRoot" value="VMware Servers"/>
     <add key="ssoRoot" value="VMware SSO Servers"/>
     <add key="dnsRoot" value="VMware Domain Name Server"/>
+	<add key="product" value="vsphere"/>
   </appSettings>
 </configuration>
