--- a/tools/mac/VMRestSsoSnapIn/VMRestSsoSnapIn/Lightwave SSO.csproj
+++ b/tools/mac/VMRestSsoSnapIn/VMRestSsoSnapIn/Lightwave SSO.csproj
@@ -337,6 +337,14 @@
     </Compile>
     <Compile Include="DataSources\SuperLogDataSource.cs" />
     <Compile Include="DataSources\SuperLogFilterDataSource.cs" />
+    <Compile Include="Views\AboutServer.cs" />
+    <Compile Include="Views\AboutServer.designer.cs">
+      <DependentUpon>AboutServer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AboutServerController.cs" />
+    <Compile Include="Views\AboutServerController.designer.cs">
+      <DependentUpon>AboutServerController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\AddExistingTenant.xib" />
@@ -376,6 +384,7 @@
     <InterfaceDefinition Include="Views\ExtenalIdpDetailsView.xib" />
     <InterfaceDefinition Include="Views\SuperLogging.xib" />
     <InterfaceDefinition Include="Views\SuperLoggingFilter.xib" />
+    <InterfaceDefinition Include="Views\AboutServer.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <ItemGroup>
