--- a/tools/win/VMRestSsoAdminSnapIn/RestSsoAdminSnapIn/RestSsoAdminSnapIn.csproj
+++ b/tools/win/VMRestSsoAdminSnapIn/RestSsoAdminSnapIn/RestSsoAdminSnapIn.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Presenters\Nodes\UsersAndGroupsNode.cs" />
     <Compile Include="Presenters\Nodes\UsersNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnapIn\ServiceGatewayManager.cs" />
     <Compile Include="SnapIn\SnapInContext.cs" />
     <Compile Include="SnapIn\SsoAdminSnapInException.cs" />
     <Compile Include="TreeImageIndex.cs" />
@@ -165,6 +166,12 @@
     </Compile>
     <Compile Include="Views\AdvancedExternalDomain.designer.cs">
       <DependentUpon>AdvancedExternalDomain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AboutServerView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AboutServerView.designer.cs">
+      <DependentUpon>AboutServerView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Probe.cs">
       <SubType>Form</SubType>
@@ -482,6 +489,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\AdvancedExternalDomain.resx">
       <DependentUpon>AdvancedExternalDomain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\AboutServerView.resx">
+      <DependentUpon>AboutServerView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Probe.resx">
       <DependentUpon>Probe.cs</DependentUpon>
