VMIdentity Upgrade Code. Initial checkin.
Change-Id: Ifb98811df6377d22b7f90fae6c7846214cc91408

--- a/vmidentity/config/Makefile.am
+++ b/vmidentity/config/Makefile.am
@@ -1,7 +1,8 @@
 
 sbin_SCRIPTS = \
     @top_builddir@/config/vmware-idmd.sh \
-    @top_builddir@/config/vmware-stsd.sh
+    @top_builddir@/config/vmware-stsd.sh \
+    @top_builddir@/config/configure-build.sh
 
 vmstsconf_DATA = \
     @top_builddir@/config/server.xml \
