--- a/vmidentity/commons/samltoken/build.xml
+++ b/vmidentity/commons/samltoken/build.xml
@@ -41,7 +41,7 @@
    </path>
 
 
-   <artifact:pom id="pom-samltoken" groupId="com.vmware.identity" artifactId="samltoken" version="6.5.0" name="VMwareIdentity-STS-Samltoken" >
+   <artifact:pom id="pom-samltoken" groupId="com.vmware.identity" artifactId="samltoken" version="${version_number}" name="VMwareIdentity-STS-Samltoken" >
     <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
     <dependency groupId="org.apache.logging.log4j" artifactId="log4j-1.2-api" version="2.0.2" />
     <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
@@ -59,6 +59,7 @@
        <arg value="-DrepositoryId=${lightwave-server-id}" />
        <arg value="-DpomFile=pom.xml" />
        <arg value="-Dfile=${jar}" />
+       <arg value="-Dversion_number=${version_number}" />
        <arg value="-Pgpg" />
      </artifact:mvn>
    </target>
