--- a/vmidentity/diagnostics/Makefile.am
+++ b/vmidentity/diagnostics/Makefile.am
@@ -1,3 +1,5 @@
+MAKEROOT=../../../
+include $(MAKEROOT)/support/make/makedefs.mk
 
 CLASSPATH=@TOOLS_CLASSPATH@:@ANT_CLASSPATH@
 
@@ -10,4 +12,4 @@ all: jar
 
 jar:
 	@echo "Building Jar"
-	cd @top_srcdir@/diagnostics && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -DBUILD_NUMBER="0" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
+	cd @top_srcdir@/diagnostics && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dversion_number="$(VMSTS_MAJOR_VER).$(VMSTS_MINOR_VER).$(VMSTS_RELEASE_VER)" -Dant.home="@ANT_HOME@" -DBUILD_NUMBER="0" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
