--- a/vmidentity/platform/build.xml
+++ b/vmidentity/platform/build.xml
@@ -29,7 +29,7 @@
       description="Instructs the 'package' task to use this manifest file" />
        
 
-   <artifact:pom id="pom-platform" groupId="com.vmware.identity" artifactId="platform" version="6.5.0" name="VMware Identity-STS-Platform" >
+   <artifact:pom id="pom-platform" groupId="com.vmware.identity" artifactId="platform" version="${version_number}" name="VMware Identity-STS-Platform" >
     <dependency groupId="net.java.dev.jna" artifactId="jna" version="4.2.1" scope="compile"/>
     <dependency groupId="net.java.dev.jna" artifactId="platform" version="4.2.1" scope="compile" />
     <dependency groupId="commons-logging" artifactId="commons-logging" version="1.1" />
@@ -53,6 +53,7 @@
        <arg value="-DpomFile=pom.xml" />
        <arg value="-Dfile=${jar}" />
        <arg value="-Pgpg" />
+       <arg value="-Dversion=${version_number}" />
      </artifact:mvn>
    </target>
 
