--- a/vmidentity/ssolib/build.xml
+++ b/vmidentity/ssolib/build.xml
@@ -59,7 +59,7 @@
         <fileset refid="jar-set.bouncy-castle" />
    </path>
    
-   <artifact:pom id="pom-websso-client" groupId="com.vmware.identity" artifactId="vmware-identity-websso-client" version="6.5.0" name="VMwareIdentity-STS-websso-client" >
+   <artifact:pom id="pom-websso-client" groupId="com.vmware.identity" artifactId="vmware-identity-websso-client" version="{version_number}" name="VMwareIdentity-STS-websso-client" >
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-1.2-api" version="2.0.2" />
         <dependency groupId="org.apache.logging.log4j" artifactId="log4j-core" version="2.2" />
