Added Lightwave Web UI to makefile, bootstrap, sts spec, configure to make them part of sts RPM and war deployment at install.

--- a/vmidentity/configure.ac
+++ b/vmidentity/configure.ac
@@ -404,6 +404,7 @@ AC_CONFIG_FILES([Makefile
                  commons/Makefile
                  ssolib/Makefile
                  websso/Makefile
+				 lightwaveui/Makefile
                  wsTrustClient/Makefile
                  sts/Makefile
                  rest/Makefile
