Added Lightwave Web UI to makefile, bootstrap, sts spec, configure to make them part of sts RPM and war deployment at install.
Change-Id: I1339c6126fc5098b9e32789a1d10000a86129583

--- a/vmidentity/lightwaveui/build.xml
+++ b/vmidentity/lightwaveui/build.xml
@@ -28,11 +28,15 @@
              value="${build.packages}/vmware-identity-websso-client.jar" />
    <property name="build.packages.samltoken"
              value="${build.packages}/samltoken.jar" />
-
+   <path id="classpath.runtime-dependencies">
+		 <pathelement location="${TomcatHome}/lib/servlet-api.jar" />
+   </path>
+   
    <path id="classpath.webapp-libs">
    </path>
 
    <path id="classpath.main">
+	   <path refid="classpath.runtime-dependencies" />
    </path>
 
    <path id="classpath.test">
